# rsapi

./: .env  Cargo.toml  readme.md
src/: main.rs
src/controller/: user_controller.rs
src/database/: mod.rs
src/models/: user.rs
src/routes/: mod.rs
src/service/: user_service.rs
