[package]
name = "ainodocs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.8.0"
actix-cors = "0.7.0"
actix-service = "1.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "time",
    "chrono",
    "uuid",
] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
bcrypt = "0.15.1"
phonenumber = "0.3.6"
base64 = "0.22.1"
time = "0.3.36"
